Fixed .time alignment

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ h5 {
   font-size: 10pt;
   text-transform: uppercase;
   float: left;
-  margin: 2px 0 0 0;
+  margin: -3px 0 0 0;
 }
 .light {
   float: left;
